# movavgrs

./: Cargo.toml  README.md  README.rst  build.rs  run_tests.sh
.github/workflows/: ci.yml
maintenance/: makerelease.sh  run_tests.sh
src/: lib.rs  sma.rs
tests/: test_sma.rs
