# -*- coding: utf-8 -*-

[package]
edition             = "2021"
name                = "movavg"
description         = "Generic Moving Average calculation"
version             = "2.4.0"
authors             = ["Michael Büsch <m@bues.ch>"]
license             = "MIT OR Apache-2.0"
readme              = "README.md"
repository          = "https://bues.ch/cgit/movavgrs.git"
rust-version        = "1.75"

categories          = ["algorithms", "no-std"]
keywords            = ["moving", "average"]

build               = "build.rs"

[features]
default             = ["std"]
std                 = []
fastfloat           = []

[dependencies]

[dependencies.num-traits]
version             = "0.2"
default-features    = false

[build-dependencies]
autocfg             = "1"

# vim: ts=4 sw=4 expandtab
